# demograph

./: .gitignore  Cargo.toml  README.md  TODO.md  dev.sh
http/: Cargo.toml  README.md
src/: main.rs
src/api/: http.rs
src/api/http/: chunks_codec.rs  error.rs  mod.rs  server.rs  session.rs  user_api_service.rs
src/domain/: mod.rs  topic.rs  topic_old.rs
src/publisher/: error.rs  session.rs
src/repository/: error.rs  flatten_sink.rs  mod.rs  mod_test.rs  plain_file_repository.rs
src/storage/: error.rs  mod.rs  topic_store.rs
src/topic/: mod.rs
src/topic/domain/: factory.rs  mod.rs  repository.rs  repository_error.rs  topic.rs  topic_error.rs
src/topic/simple/: factory.rs  factory_test.rs  fixtures.rs  mod.rs  repository.rs  repository_test.rs  topic.rs  topic_error.rs  topic_test.rs
websock/: Cargo.toml  websocket.html
websock/examples/: echo.rs
websock/src/: lib.rs
