[package]
authors = ["Merlijn Boogerd <mboogerd@xebia.com>"]
name = "demograph"
version = "0.1.0"
edition = "2018"

[dependencies]
http = { path = "http" }
bytes = "0.4.10"
futures = "0.1.25"
hyper = "0.12.24"
log = "0.4.6"
simplelog="0.5.3"
tokio = "0.1.15"
tokio-codec = "0.1.1"
tokio-core = "0.1.17"
tokio-fs = "0.1.4"
tokio-io = "0.1.10"
websocket = "0.21.1"
regex = "1"
lazy_static = "1.2.0"