[package]
authors = ["Merlijn Boogerd <mboogerd@xebia.com>"]
edition = "2018"
name = "demograph"
version = "0.1.0"

[dependencies]
bytes = "0.4.12"
futures = "0.1.29"
hyper = "0.12.35"
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.1"
simplelog = "0.7.4"
tokio = "0.1.22"
tokio-codec = "0.1.1"
tokio-core = "0.1.17"
tokio-fs = "0.1.6"
tokio-io = "0.1.12"
websocket = "0.23.0"

[dependencies.http]
path = "http"
