[package]
authors = ["Merlijn Boogerd <mboogerd@xebia.com>"]
edition = "2018"
name = "demograph"
version = "0.1.0"
[dependencies]
bytes = "0.4.12"
futures = "0.1.29"
hyper = "0.12.35"
json-patch = "0.2.6"
lazy_static = "1.4.0"
log = "0.4.8"
quick-error = "1.2.2"
rand = "0.7.2"
regex = "1.3.1"
serde_json = "1.0.41"
simplelog = "0.7.4"
tokio = "1.8.4"
tokio-codec = "0.1.1"
tokio-core = "0.1.17"
tokio-fs = "0.1.6"
tokio-io = "0.1.12"
tokio-jsoncodec = "0.1.0"
websocket = "0.23.0"

[dependencies.http]
path = "http"

[dependencies.websock]
path = "websock"
